--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,19 +3,27 @@
 
 $color-background:#1d0e98;
 
-$color-text-main:#EB1E07;
-$color-text-title:#EB1E07;
-$color-text-content:#EB1E07;
+$color-text-main:white;
+$color-text-title:white;
+$color-text-content:white;
 
-$color-nav-link:#EB1E07;
-$color-nav-link-hover:#EB1E07;
+$color-nav-link:yellow;
+$color-nav-link-hover:orange;
 
 $color-popup-background:#EB1E07;
 $color-popup-text:#EB1E07;
+$color-popup-shadow:black;
 
 // TITLE COLORS
 
-$color-title-hover: #EB1E07;
-$color-title-one:#EB1E07;
+$color-title-contouring:#be1c0a;
+$color-title-first:#e01c06;
+$color-title-two:#fa9005;
+$color-title-three:#f5f127;
+$color-title-four:#3ce408;
+$color-title-five:#0aeee3;
+$color-title-last:#060169;
+
+
 
 //  PROJET FONT SIZES
