--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -8,7 +8,7 @@ $color-text-title:white;
 $color-text-content:white;
 
 $color-nav-link:yellow;
-$color-nav-link-hover:orange;
+$color-nav-link-hover:white;
 
 $color-popup-background:#EB1E07;
 $color-popup-text:#EB1E07;
@@ -23,5 +23,12 @@ $color-title-three:#f5f127;
 $color-title-four:#3ce408;
 $color-title-five:#0aeee3;
 $color-title-last:#060169;
+
+// TRANSITIONS
+
+$transition-fast: 0.2s;
+$transition-slow: 1s;
+
+// SPACING
 
 //  PROJET FONT SIZES
