--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,18 +2,15 @@
 @use 'vars';
 
 body {
-  font-family: sans-serif;
+  display:flex;
+  font-family: 'Barlow', sans-serif;
   background-color: vars.$color-background;
+  margin:0;
 }
 
-/* 
-  // or you can import your own font
-  @font-face {
-    font-family: 'Roboto';
-    src: url('../assets/fonts/Roboto-Regular.ttf');
-  }
+  // // CUSTOM FONT : 
+  // @font-face {
+  //   font-family: 'Barlow';
+  //   src: url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+  // }
 
-  body {
-    font-family: 'Roboto', sans-serif;
-  }
-*/
