--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -27,7 +27,10 @@
     transform: scale(1.1);
     cursor:pointer;
   }
-  
+  .nav-link-active {
+    text-decoration: underline;
+    font-weight: bolder;
+  }
 }
 
 }
