--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -11,8 +11,11 @@ $color-nav-link:yellow;
 $color-nav-link-hover:white;
 
 $color-popup-background:#EB1E07;
-$color-popup-text:#EB1E07;
+$color-popup-text:yellow;
 $color-popup-shadow:black;
+
+$color-button-background: red;
+$color-button-text:black;
 
 // TITLE COLORS
 
