create-component-loader

--- a/src/components/Header/title.scss
+++ b/src/components/Header/title.scss
@@ -33,7 +33,7 @@
         40px 40px 10px vars.$color-title-last;
         text-transform:uppercase ;
         &:hover {
-          font-variation-settings: "wght" 100, "ital" 0;
+          // font-variation-settings: "wght" 100, "ital" 0;
           text-shadow: none;
         }
       
