--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -10,11 +10,11 @@ $color-text-content:white;
 $color-nav-link:yellow;
 $color-nav-link-hover:white;
 
-$color-popup-background:#EB1E07;
+$color-popup-background:white;
 $color-popup-text:yellow;
 $color-popup-shadow:black;
 
-$color-button-background: red;
+$color-button-background: white;
 $color-button-text:black;
 
 // TITLE COLORS
