--- a/src/components/Popup/popup.scss
+++ b/src/components/Popup/popup.scss
@@ -15,6 +15,8 @@ right:5%;
 border:none;
 border-radius: 8%;
 box-shadow:2px 2px 2px 2px vars.$color-popup-shadow;
+font-family: 'Barlow', sans-serif;
+
 
   .popup-button {
 
