update-font-colors-style

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@
 body {
   display:flex;
   font-family: 'Barlow', sans-serif;
-  background-color: vars.$color-background;
+  background: vars.$color-background;
   margin:0;
 }
   // @font-face {
