--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,7 +1,7 @@
 
 // MAIN PROJET COLORS
 
-$color-background:#1d0e98;
+$color-background:#0d0455;
 
 $color-text-main:white;
 $color-text-title:white;
@@ -10,12 +10,12 @@ $color-text-content:white;
 $color-nav-link:yellow;
 $color-nav-link-hover:white;
 
-$color-popup-background:white;
+$color-popup-background:#0d0455;
 $color-popup-text:yellow;
 $color-popup-shadow:black;
 
-$color-button-background: white;
-$color-button-text:black;
+$color-button-background:#0d0455;
+$color-button-text:yellow;
 
 // TITLE COLORS
 
