--- a/src/components/Header/title.scss
+++ b/src/components/Header/title.scss
@@ -10,7 +10,7 @@
   .title-container {
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
+    padding-top: 5px;
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
