--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -3,9 +3,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: red;
+  margin-left:200px;
+  margin-right:200px;
+  box-sizing: border-box;
   .home-banniere {
-    width: 100%;
-    height: 20%;
+    width: 500px;
+    height: 100px;
+    position:absolute;
+    left:38%;
+    top:30%;
+    right:auto;
+    bottom:auto;
     .home-banniere-img {
       background-size: cover;
       width: 100%;
@@ -13,18 +22,27 @@
     }
   }
   .popular-scenarios-container {
-    width: 300px;
-    height: 400px;
+    width: 500px;
+    height: 500px;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    
-    .popular-scenarios-scenario{
-      width: 5em;
-      height: 8em;
-     .popular-scenarios-scenario-image{
+    justify-content: space-evenly;
+    background-color: yellow;
+    .popular-scenarios-scenario {
+      width: 200px;
+      height: 100px;
+     .popular-scenarios-scenario-image {
        width: 100%;
-       
+       padding-top:10px;
+     }
+     .popular-scenarios-scenario-text {
+       background-color: black;
+       color:white;
+       border:none;
+       padding-top:2px;
+       padding-bottom:2px;
+       margin-top:2px;
      }
     }
   }
