--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,24 +1,31 @@
 
 .home-main{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  background-color: red;
-  margin-left:200px;
-  margin-right:200px;
+  // background-color: red;
   box-sizing: border-box;
-  .home-banniere {
-    width: 500px;
-    height: 100px;
-    position:absolute;
-    left:38%;
-    top:30%;
+      position:absolute;
+    left:20%;
+    top:28%;
     right:auto;
     bottom:auto;
+    width: 1200px;
+    height: 550px;
+  .home-banniere {
+    margin-top:20px;
+    margin-right:10px;
+    width: 300px;
+    height: 100px;
     .home-banniere-img {
       background-size: cover;
       width: 100%;
       height: 100%;
+    }
+    .home-banniere-text {
+      background-color: black;
+      color:white;
+      padding:5px;
     }
   }
   .popular-scenarios-container {
@@ -29,6 +36,8 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     background-color: yellow;
+    margin-top:20px;
+    padding-top:10px;
     .popular-scenarios-scenario {
       width: 200px;
       height: 100px;
@@ -40,8 +49,7 @@
        background-color: black;
        color:white;
        border:none;
-       padding-top:2px;
-       padding-bottom:2px;
+       padding:5px;
        margin-top:2px;
      }
     }
