--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -16,7 +16,7 @@
     margin-top:20px;
     margin-right:10px;
     width: 300px;
-    height: 100px;
+    height: 300px;
     .home-banniere-img {
       background-size: cover;
       width: 100%;
@@ -26,6 +26,8 @@
       background-color: black;
       color:white;
       padding:5px;
+      width: 300px;
+      height: 200px;
     }
   }
   .popular-scenarios-container {
