create-component-popup-login-signin-comment-mobile

--- a/src/components/Header/buttonlog.scss
+++ b/src/components/Header/buttonlog.scss
@@ -2,7 +2,7 @@
 
 .log-container {
 
-background-color:vars.$color-popup-background;
+// background-color:vars.$color-popup-background;
 color: vars.$color-popup-text;
 display:flex;
 align-items: center;
