--- a/back/templates/base.html.twig
+++ b/back/templates/base.html.twig
@@ -14,6 +14,10 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+        <li class="nav-item">
+			<a class="btn btn-success" href="{{ path('app_login') }}">Connexion</a>
+		</li>
+        {% endblock %}
     </body>
 </html>
