feat-finition-BO

--- a/back/templates/back/comment/list.html.twig
+++ b/back/templates/back/comment/list.html.twig
@@ -23,7 +23,7 @@
         {% for comment in comments %}
             <tr>
                 <td>{{ comment.id }}</td>
-                <td>{{ comment.content }}</td>
+                <td>{{ comment.content|u.truncate(40, '...') }}</td>
                 <td>{{ comment.rating }}</td>
                 <form action="{{ path('back_comment_update', {id: comment.id}) }}" method="get">
                     <td>
