--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -10,7 +10,7 @@ $color-text-content:white;
 $color-nav-link:yellow;
 $color-nav-link-hover:white;
 
-$color-popup-background:#07032b;
+$color-popup-background:rgb(232, 229, 229);
 $color-popup-text:yellow;
 $color-popup-shadow:black;
 
