--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@ body {
   font-family: 'Barlow', sans-serif;
   background: vars.$color-background ;
   margin:0;
+  max-width: 100;
 
 }
   // @font-face {
