--- a/src/components/Popup/login.scss
+++ b/src/components/Popup/login.scss
@@ -1,9 +1,42 @@
 @use 'src/styles/vars';
 
 .login-container {
-  background-color: black;
-  color:white;
+  background-color:vars.$color-popup-background;
+  color:black;
   padding:5px;
   width: 300px;
-  height: 200px;
+  height: 300px;
+  border:none;
+  position:absolute;
+  left:80%;
+  top:5%;
+  right:auto;
+  bottom:auto;
+
+  .login-container-logged {
+    border:none;
+
+  }
+
+// Element correspond à un champ de field
+  .login-element{
+
+    border:none;
+    // background-color:red;
+
+  }
+
+  // Bouton de connexion / déconnexion
+
+.login-button-ok, .login-button-off {
+  border:none;
+  color:black;
+}
+
+// Lorsque l'utilisateur est connecté
+
+.login-container-message {
+  border:none;
+
+}
 }
