--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -14,14 +14,14 @@
     right:auto;
     bottom:auto;
     width: 700px;
-    height: 800px;
+    height: 600px;
     padding:10px;
     margin:2px;
   .home-banniere {
-    margin-top:20px;
+    margin-top:10px;
     margin-right:10px;
     width: 600px;
-    height: 300px;
+    height: 200px;
     .home-banniere-img {
       background-size: cover;
       width: 500px;
@@ -30,31 +30,36 @@
 
   }
   .popular-scenarios-container {
-    width: 500px;
-    height: 800px;
+    width: 650px;
+    height: 350px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
     background-color: yellow;
-    margin-top:20px;
-    padding-top:10px;
+    margin:5px;
     box-sizing: border-box;
 
     .popular-scenarios-scenario {
-      width: 200px;
-      height: 100px;
+      width: 300px;
+      height: 200px;
+      display: flex;
+      flex-direction: row;
+
      .popular-scenarios-scenario-image {
-       width: 100%;
-       padding-top:10px;
+       width: 150px;
+       height: 150px;
+
      }
      .popular-scenarios-scenario-text {
        background-color: black;
        color:white;
        border:none;
        padding:5px;
-       margin-top:2px;
+       margin:2px;
        box-sizing: border-box;
+       width: 150px;
+       height: 150px;
 
      }
     }
