--- a/src/components/Popup/Field/field.scss
+++ b/src/components/Popup/Field/field.scss
@@ -1,9 +1,9 @@
 .field {
-  margin: 2rem 0;
+  margin: 1rem 0;
   position: relative;
 
   &:not(:last-child) {
-    margin-bottom: 3.4rem;
+    // margin-bottom: 1rem;
   }
 
   .label {
@@ -12,6 +12,7 @@
     left: 0;
     top: 0;
     margin-top: -1.4em;
+    color:black;
   }
 
   .input {
