fix-component-legalnoticecontact-footer-link-route-switch

--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,8 +1,9 @@
 
 @use 'src/styles/vars';
-
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 .home-main{
+  font-family: 'Quicksand', sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: center;
