--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,4 +1,5 @@
 @use 'src/styles/vars';
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 .footer-container {
   display:inline-flex;
@@ -12,6 +13,7 @@
   right:0;
   top:100%;
   bottom:auto;
+  font-family: 'Quicksand', sans-serif;
   // background-color: red;
 
   .footer-link {
