--- a/src/components/Header/ButtonLog/buttonlog.scss
+++ b/src/components/Header/ButtonLog/buttonlog.scss
@@ -1,4 +1,5 @@
 @use 'src/styles/vars';
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 .log-container {
 
@@ -13,9 +14,8 @@ position:absolute;
 top:5%;
 right:5%;
 border:none;
-// border-radius: 2%;
 // box-shadow:2px 2px 8px 2px vars.$color-popup-shadow;
-font-family: 'Barlow', sans-serif;
+font-family: 'Quicksand', sans-serif;
 
 
   .log-button {
