--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -32,17 +32,24 @@ $color-title-last:#060169;
 $transition-fast: 0.2s;
 $transition-slow: 1s;
 
-// SPACING
+// MIXIN TEMPLAGE PAGE
 
-//  PROJET FONT SIZES
-
-// MIXIN
-
-// DIV COMMUNE POPUP
+// MIXIN TEMPLATE POPUP
 
 @mixin popup {
-
-  
+  background-color:vars.$color-popup-background;
+  color:black;
+  padding:5px;
+  width: 200px;
+  height: 200px;
+  border:none;
+  position:absolute;
+  left:80%;
+  top:5%;
+  border-radius: 10% 10% 0 0;
+  border-bottom: 20px solid vars.$color-title-five ;  
+  right:auto;
+  bottom:auto;
 }
 
 // FOND ESPACE
