--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,17 +1,12 @@
 @use 'reset';
 @use 'vars';
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 body {
   display:flex;
-  font-family: 'Barlow', sans-serif;
   background: vars.$color-background ;
   margin:0;
   max-width: 100;
+  font-family: 'Quicksand', sans-serif;
 
 }
-  // @font-face {
-  // font-family: "Barlow";
-  // font-style: normal;
-  // font-weight: normal;
-  // src: url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-  // }
