--- a/src/components/LegalNoticeContact/noticeContact.scss
+++ b/src/components/LegalNoticeContact/noticeContact.scss
@@ -1,23 +1,64 @@
 @use 'src/styles/vars';
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+@font-face {
+  src: url("https://www.axis-praxis.org/fonts/webfonts/MetaVariableDemo-Set.woff2")
+    format("woff2");
+  font-family: "Meta";
+  font-style: normal;
+  font-weight: normal;
+}
 
 .notice-container {
 
-
-  font-family: 'Quicksand', sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: vars.$color-popup-background;
+  box-sizing: border-box;
+  position:absolute;
+   left:33%;
+   top:28%;
+   right:auto;
+   bottom:auto;
+   width: 700px;
+   height: 600px;
+   padding:10px;
+   margin:2px;
+   border-radius: 5% 5% 0 0;
+   border-bottom: 45px solid vars.$color-title-first ;  
 
   .notice-title {
-
-    .notice-subtitle {
-
-    }
+    font-family: "Meta";
+    font-size: 2rem;
+    text-align: center;
+    color: vars.$color-title-first;
+    // text-shadow: 8px 5px 0px vars.$color-title-two;
+    font-variation-settings: "wght" 900, "ital" 1;
+    padding-bottom:10px;
+    margin:2px;
   }
-
+   .notice-subtitle {
+      font-family: "Meta";
+      font-variation-settings: "wght" 900, "ital" 1;
+      color:red;
+      padding-bottom:10px;
+      margin:2px;
+    }
   .notice-text {
+    font-family:'Quicksand', sans-serif; 
+    padding-left:50px;
+    padding-right:50px;
+    margin:2px;
 
   }
 
   .notice-link {
-    
+    margin:2px;
+    padding-top:5px;
+    padding-bottom:5px;
+    font-weight: bold;
+    &:hover {
+      color:red;
+    }
   }
 }
