update-fix-component-about-css

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -17,7 +17,7 @@
   // background-color: red;
 
   .footer-link {
-  color:white;
+  color:yellow;
   &:hover {
     color:vars.$color-nav-link-hover;
     transition: vars.$transition-slow;
@@ -28,7 +28,7 @@
   
   .footer-date {
     padding-right:10px;
-    color:white;
+    color:yellow;
   }
 
   
