--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -13,18 +13,18 @@
     right:auto;
     bottom:auto;
     width: 700px;
-    height: 600px;
+    height: 700px;
     padding:10px;
     margin:2px;
   .home-banniere {
     margin-top:10px;
-    margin-right:10px;
+    paddingt-left:10px;
     width: 600px;
     height: 200px;
     .home-banniere-img {
-      background-size: cover;
-      width: 600px;
-      height: 200px;
+    background-size: cover;
+    width:600px;
+    height:200px;
     }
 
   }
