--- a/src/components/Game/Waiting/waiting.scss
+++ b/src/components/Game/Waiting/waiting.scss
@@ -10,6 +10,43 @@ $base-matrix: matrix(0.9, 0.5, 0, 1, 0, 0);
   @return $n * ($cube-size - 1px);
 }
 
+.waiting-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: vars.$color-popup-background;
+  box-sizing: border-box;
+  position:absolute;
+   left:33%;
+   top:28%;
+   right:auto;
+   bottom:auto;
+   width: 700px;
+   height: 600px;
+   padding:10px;
+   margin:2px;
+   border-radius: 5% 5% 0 0;
+   border-bottom: 45px solid vars.$color-title-first ;  
+}
+
+.waiting-title {
+  font-family: "Meta";
+  font-size: 2rem;
+  text-align: center;
+  color: vars.$color-title-first;
+  // text-shadow: 8px 5px 0px vars.$color-title-two;
+  font-variation-settings: "wght" 900, "ital" 1;
+  padding-bottom:10px;
+  margin:2px;
+}
+
+.waiting-text {
+  font-family:'Quicksand', sans-serif; 
+  padding-left:50px;
+  padding-right:50px;
+  margin:2px;
+}
+
 .layer {
   position: absolute;
   width: 100%;
