update-global-template-css

--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -18,7 +18,7 @@
     margin:2px;
   .home-banniere {
     margin-top:10px;
-    paddingt-left:10px;
+    padding-left:10px;
     width: 600px;
     height: 200px;
     .home-banniere-img {
@@ -30,13 +30,15 @@
   }
   .popular-scenarios-container {
     width: 650px;
-    height: 350px;
+    height: 400px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    background-color: yellow;
+    // background-color: yellow;
     margin:5px;
+    padding-top:10px;
+    padding-bottom:10px;
     box-sizing: border-box;
 
     .popular-scenarios-scenario {
@@ -44,6 +46,7 @@
       height: 200px;
       display: flex;
       flex-direction: row;
+      box-shadow: 5px 5px 5px rgb(165, 159, 159);
 
      .popular-scenarios-scenario-image {
        width: 150px;
@@ -51,10 +54,12 @@
 
      }
      .popular-scenarios-scenario-text {
-       background-color: black;
+       background-color: vars.$color-title-last;
        color:white;
        border:none;
        padding:5px;
+       padding-top:10px;
+       text-align: justify;
        margin:2px;
        box-sizing: border-box;
        width: 150px;
