--- a/src/components/LegalNoticeContact/noticeContact.scss
+++ b/src/components/LegalNoticeContact/noticeContact.scss
@@ -25,14 +25,16 @@
    padding:10px;
    margin:2px;
    border-radius: 5% 5% 0 0;
-   border-bottom: 20px solid vars.$color-title-first ;  
+   border-bottom: 20px solid vars.$color-title-last ;
+   border-right: 10px solid vars.$color-title-last ;  
+  
 
   .notice-title {
     font-family: "Meta";
     font-size: 2rem;
     text-align: center;
     color: vars.$color-title-first;
-    // text-shadow: 8px 5px 0px vars.$color-title-two;
+    text-shadow: 8px 5px 4px vars.$color-title-two;
     font-variation-settings: "wght" 900, "ital" 1;
     padding-bottom:10px;
     margin:2px;
@@ -49,7 +51,6 @@
     padding-left:50px;
     padding-right:50px;
     margin:2px;
-
   }
 
   .notice-link {
@@ -60,5 +61,23 @@
     &:hover {
       color:red;
     }
+  }
+  .notice-button {
+    background-color: red;
+    color:white;
+    display:inline-block;
+    text-transform:uppercase;
+    font-weight: bold;
+    border:none;
+    width:100px;
+    height:30px;
+    position:absolute;
+    left:42%;
+    right:auto;
+    top:45%;
+    bottom:auto;
+    border-radius:10px;
+    font-family: "Meta";
+
   }
 }
