--- a/src/components/Popup/login.scss
+++ b/src/components/Popup/login.scss
@@ -19,7 +19,11 @@
   left:80%;
   top:5%;
   border-radius: 10%;
-  border-bottom: 25px solid vars.$color-title-five ;  
+  border-bottom: 5px solid vars.$color-title-last ;
+  // border-top: 5px solid vars.$color-title-four ;  
+  // border-left: 5px solid vars.$color-title-first ;  
+  border-right: 5px solid vars.$color-title-last ;  
+
   right:auto;
   bottom:auto;
 
@@ -49,5 +53,28 @@
   border:none;
   color:black;
   // background-color:red;
+}
+
+// Bouton fermant
+
+.popup-button-close {
+
+  transition: all 0.5s ease;
+  position: absolute;
+  background-color: vars.$color-background;
+  padding: 1.5px 7px;
+  left: 50%;
+  margin-left: -10px;
+  margin-top: -9px;
+  border-radius: 50%;
+  border: 2px solid vars.$color-popup-background;
+  color: vars.$color-popup-background;
+  -webkit-box-shadow: -4px -2px 6px 0px rgba(0,0,0,0.1);
+  -moz-box-shadow: -4px -2px 6px 0px rgba(0,0,0,0.1);
+  box-shadow: -3px 1px 6px 0px rgba(0,0,0,0.1);
+  &:hover {
+    background-color: vars.$color-background;
+    color: #fff;
+  }
 }
 }
