create-mediaqueries-delete-subcomponent-mobile

--- a/src/components/Popup/login.scss
+++ b/src/components/Popup/login.scss
@@ -54,7 +54,7 @@
   // background-color:red;
 }
 
-// Bouton fermant (à ajouter sur le formulaire inscription, pas besoin sur mobile, ni sur commentaire, ni sur celui-ci)
+// Bouton fermant 
 .popup-button-close {
   transition: all 0.5s ease;
   position: absolute;
