--- a/src/components/Popup/signin.scss
+++ b/src/components/Popup/signin.scss
@@ -6,4 +6,24 @@
   padding:5px;
   width: 300px;
   height: 200px;
+
+.popup-button-close {
+  transition: all 0.5s ease;
+  position: absolute;
+  background-color: vars.$color-background;
+  padding: 1.5px 7px;
+  left: 50%;
+  margin-left: 35px;
+  margin-top: -15px;
+  border-radius: 50%;
+  border: 2px solid vars.$color-popup-background;
+  color: vars.$color-popup-background;
+  -webkit-box-shadow: -4px -2px 6px 0px rgba(0,0,0,0.1);
+  -moz-box-shadow: -4px -2px 6px 0px rgba(0,0,0,0.1);
+  box-shadow: -3px 1px 6px 0px rgba(0,0,0,0.1);
+  &:hover {
+    background-color: vars.$color-background;
+    color: #fff;
+  }
+}
 }
