update-mediaqueries-responsive-mobiledevice

--- a/src/components/Header/ButtonLog/buttonlog.scss
+++ b/src/components/Header/ButtonLog/buttonlog.scss
@@ -20,7 +20,7 @@ font-family: 'Quicksand', sans-serif;
 
   .log-button {
 
-background-color: vars.$color-button-background;
+background-color:#11ffee00 ;
 color: vars.$color-button-text;
 border:none;
 text-transform: uppercase;
