--- a/back/templates/base.html.twig
+++ b/back/templates/base.html.twig
@@ -23,7 +23,7 @@
 
     {% include 'back/include/_nav.html.twig' %}
 
-    <body>
+    <body class="ghost table">
 
 		<div class="container">
 			<div class="row">
