--- a/back/public/css/style.css
+++ b/back/public/css/style.css
@@ -15,6 +15,12 @@ h1 {
    margin-bottom: 30px;
 }
 
-#movie_genres {
-    columns: 3;
+.ghost {
+    background-image: url("/images/ghost.jpg");
+}
+
+.table {
+    font-size: 1.20rem;
+    font-weight: bold;
+    font-style: oblique;
 }
