--- a/back/templates/back/comment/list.html.twig
+++ b/back/templates/back/comment/list.html.twig
@@ -9,7 +9,7 @@
 		<div class="col-11"><h1>Liste des Commentaires</h1></div>
 		<div class="col-1 d-flex align-items-center"><a href="{{ path('back_comment_create') }}" class="btn btn-success">Ajouter</a></div>
     </div>
-    <table class="table">
+    <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th>Id</th>
