--- a/back/templates/security/login.html.twig
+++ b/back/templates/security/login.html.twig
@@ -35,8 +35,14 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
+    <button class="mt-3 me-3 btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
 </form>
+<form action="{{ path('app_forgot_password_request') }}">
+    <button class="mt-3 btn btn-lg btn-danger" type="submit">
+        Vous avez oublié votre mot de passe ?
+    </button>
+</form>
+
 {% endblock %}
