--- a/back/templates/back/include/_nav.html.twig
+++ b/back/templates/back/include/_nav.html.twig
@@ -8,6 +8,12 @@
 				<li class="nav-item">
 					<a class="nav-link text-muted {% block Comment %}{% endblock %}" href="{{ path('back_comment_list') }}">Comments</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link text-muted {% block Game %}{% endblock %}" href="{{ path('back_game_list') }}">Games</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link text-muted {% block Score %}{% endblock %}" href="{{ path('back_score_list') }}">High Scores</a>
+				</li>
 			</ul>
 		</div>
 		<div class="col-6 d-flex flex-row-reverse">
