--- a/back/templates/back/game/score.html.twig
+++ b/back/templates/back/game/score.html.twig
@@ -6,8 +6,7 @@
 
 <div class="container mb-auto">
 	<div class="row d-flex">
-		<div class="col-11"><h1>Liste des Parties</h1></div>
-		<div class="col-1 d-flex align-items-center"><a href="{{ path('back_comment_create') }}" class="btn btn-success">Ajouter</a></div>
+		<div class="col-11"><h1>Tableau des high scores</h1></div>
     </div>
     <table class="table table-striped table-hover">
         <thead>
@@ -22,7 +21,7 @@
             <tr>
                 <td>{{ game.nickname }}</td>
                 <td>{{ game.score }}</td>
-                <td>{{ game.ended_at }}</td>
+                <td>{{ game.ended_at|date("m/d/Y") }}</td>
             </tr>
         {% else %}
             <tr>
