--- a/src/components/Header/ButtonLog/buttonlog.scss
+++ b/src/components/Header/ButtonLog/buttonlog.scss
@@ -8,7 +8,7 @@ color: vars.$color-popup-text;
 display:flex;
 align-items: center;
 justify-content: space-around;
-width:200px;
+width:250px;
 height:100px;
 position:absolute;
 top:5%;
@@ -24,11 +24,19 @@ background-color:#11ffee00 ;
 color: vars.$color-button-text;
 border:none;
 text-transform: uppercase;
+font-family: 'Quicksand', sans-serif;
+
 &:hover {
   color:vars.$color-nav-link-hover;
   cursor:pointer;
-
 }
+  }
+
+  .log-text {
+    color: vars.$color-button-text;
+    text-transform: uppercase;
+    font-size:15px;
+    font-family: 'Quicksand', sans-serif;
 
   }
 }
