--- a/src/components/Popup/signin.scss
+++ b/src/components/Popup/signin.scss
@@ -1,34 +1,14 @@
 @use 'src/styles/vars';
 
 
-// .signin-container {
-//   background-color: black;
-//   color:white;
-//   padding:5px;
-//   width: 300px;
-//   height: 200px;
+@font-face {
+  src: url("https://www.axis-praxis.org/fonts/webfonts/MetaVariableDemo-Set.woff2") format("woff2");
+  font-family: "Meta";
+  font-style: normal;
+  font-weight: normal;
+}
 
-// .popup-button-close {
-//   transition: all 0.5s ease;
-//   position: absolute;
-//   background-color: vars.$color-background;
-//   padding: 1.5px 7px;
-//   left: 50%;
-//   margin-left: 35px;
-//   margin-top: -15px;
-//   border-radius: 50%;
-//   border: 2px solid vars.$color-popup-background;
-//   color: vars.$color-popup-background;
-//   -webkit-box-shadow: -4px -2px 6px 0px rgba(0,0,0,0.1);
-//   -moz-box-shadow: -4px -2px 6px 0px rgba(0,0,0,0.1);
-//   box-shadow: -3px 1px 6px 0px rgba(0,0,0,0.1);
-//   &:hover {
-//     background-color: vars.$color-background;
-//     color: #fff;
-//   }
-// }
-// =======
-.signin-background{
+.signin-background {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,19 +17,59 @@
   position: fixed;
   top: 0;
   background-color: rgba(15, 15, 15, 0.39);
+
   .signin-container {
-    background-color: black;
-    color:white;
-    padding:5px;
+    background-color: vars.$color-popup-background;
+    color: white;
+    padding: 5px;
     width: 300px;
     height: 200px;
+
     .signin-closed {
-      transform: rotate(45deg);
-      font-size: 1em;
-      border: none;
-      border-radius: 1em;
+      transition: all 0.5s ease;
+      position: absolute;
+      background-color: vars.$color-background;
+      padding: 1.5px 7px;
+      left: 50%;
+      margin-top: -15px;
+      border-radius: 50%;
+      border: 2px solid vars.$color-popup-background;
+      color: vars.$color-popup-background;
+      -webkit-box-shadow: -4px -2px 6px 0px rgba(0, 0, 0, 0.1);
+      -moz-box-shadow: -4px -2px 6px 0px rgba(0, 0, 0, 0.1);
+      box-shadow: -3px 1px 6px 0px rgba(0, 0, 0, 0.1);
+
+      // &:hover {
+      //     transform: rotate(45deg);
+      //     font-size: 1em;
+      //     border: none;
+      //     border-radius: 1em;
+      //   }
+
+    }
+
+    .signin-form {
+      margin-top: 15px;
+      margin-bottom: 10px;
+      color: black;
+
+      .signin-field {
+        border: none;
+        color: black;
+        margin-bottom: 5px;
+        margin-top: 10px;
+      }
+
+      .signin-button {
+        margin: 5px;
+        border: none;
+        color: black;
+        font-variation-settings: "wght"900;
+        font-family: "Meta";
+        background-color: #11ffee00;
+      }
     }
   }
-
 }
+
 
