--- a/src/components/Popup/login.scss
+++ b/src/components/Popup/login.scss
@@ -23,6 +23,9 @@
     padding: 5px;
     width: 300px;
     height: 200px;
+    border-radius: 10%;
+    border-bottom: 10px solid vars.$color-title-three;
+    border-right: 10px solid vars.$color-title-three;
 
     .login-closed {
       transition: all 0.5s ease;
@@ -30,7 +33,6 @@
       background-color: vars.$color-background;
       padding: 1.5px 7px;
       left: 50%;
-      margin-left: 35px;
       margin-top: -15px;
       border-radius: 50%;
       border: 2px solid vars.$color-popup-background;
