--- a/src/components/Popup/signin.scss
+++ b/src/components/Popup/signin.scss
@@ -24,6 +24,10 @@
     padding: 5px;
     width: 300px;
     height: 200px;
+    border-radius: 10%;
+    border-bottom: 10px solid vars.$color-title-five;
+    border-right: 10px solid vars.$color-title-five;
+  
 
     .signin-closed {
       transition: all 0.5s ease;
