update-authmiddleware-submit

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,7 +22,18 @@
     font-style: normal;
     font-weight: normal;
   }
-  
+  .mobile-back {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    background-color: rgba(15, 15, 15, 0.39);
+  }
+
   .mobile-container {
   
     background-color:vars.$color-popup-background;
@@ -77,6 +88,18 @@
     background: #020949;
     margin:0;
     font-family: 'Quicksand', sans-serif;
+  }
+
+  .mobile-back {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    background-color: rgba(15, 15, 15, 0.39);
   }
 
     .mobile-container {
