--- a/src/components/Game/Win/win.scss
+++ b/src/components/Game/Win/win.scss
@@ -1,3 +1,82 @@
-.win-title {
-  color: white;
+@use 'src/styles/vars';
+
+@font-face {
+  src: url("https://www.axis-praxis.org/fonts/webfonts/MetaVariableDemo-Set.woff2")
+    format("woff2");
+  font-family: "Meta";
+  font-style: normal;
+  font-weight: normal;
+}
+
+.win-container {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: vars.$color-popup-background;
+  box-sizing: border-box;
+  position:absolute;
+   left:33%;
+   top:28%;
+   right:auto;
+   bottom:auto;
+   width: 700px;
+   height: 600px;
+   padding:10px;
+   margin:2px;
+   border-bottom: 20px solid vars.$color-title-last ;
+   border-right: 10px solid vars.$color-title-last ;  
+  
+
+  .win-title {
+    font-family: "Meta";
+    font-size: 2rem;
+    text-align: center;
+    color: vars.$color-title-first;
+    font-variation-settings: "wght" 900, "ital" 1;
+    padding-bottom:10px;
+    margin:2px;
+  }
+   .win-subtitle {
+      font-family: "Meta";
+      font-variation-settings: "wght" 900, "ital" 1;
+      color:red;
+      padding-bottom:10px;
+      margin:2px;
+      margin-top:10px;
+    }
+  .win-text {
+    font-family:'Quicksand', sans-serif; 
+    padding-left:50px;
+    padding-right:50px;
+    margin:2px;
+  }
+
+  .win-link {
+    margin:2px;
+    padding-top:5px;
+    padding-bottom:5px;
+    font-weight: bold;
+    &:hover {
+      color:red;
+    }
+  }
+  .win-button {
+    background-color: red;
+    color:white;
+    display:inline-block;
+    text-transform:uppercase;
+    font-weight: bold;
+    border:none;
+    width:100px;
+    height:30px;
+    position:absolute;
+    left:42%;
+    right:auto;
+    top:45%;
+    bottom:auto;
+    border-radius:10px;
+    font-family: "Meta";
+
+  }
 }
