--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -5,17 +5,16 @@
    display: flex;
    flex-direction: column;
    justify-content: center;
+   align-items: center;
    background-color: vars.$color-popup-background;
    box-sizing: border-box;
    position:absolute;
-    left:33%;
     top:28%;
-    right:auto;
-    bottom:auto;
-    width: 700px;
+    width: 100%;
     height: 700px;
     padding:10px;
     margin:2px;
+    
   .home-banniere {
     margin-top:10px;
     padding-left:10px;
