--- a/src/components/Popup/comment.scss
+++ b/src/components/Popup/comment.scss
@@ -9,15 +9,18 @@
   height: 200px;
   border:none;
   position:absolute;
-  left:50%;
+  left:35%;
+  margin:auto;
   top:50%;
   border-radius: 10%;
   border-bottom: 5px solid vars.$color-title-last ;
-  // border-top: 5px solid vars.$color-title-four ;  
-  // border-left: 5px solid vars.$color-title-first ;  
+  border-top: 5px solid vars.$color-title-four ;  
+  border-left: 5px solid vars.$color-title-first ;  
   border-right: 5px solid vars.$color-title-last ;  
   right:auto;
   bottom:auto;
+  display: flex;
+  justify-self: center;  
 
   .comment-form {
 
@@ -55,8 +58,8 @@
     background-color: vars.$color-background;
     padding: 1.5px 7px;
     left: 50%;
-    margin-left: 45px;
-    margin-top: -15px;
+    margin-left: 30px;
+    margin-top: -20px;
     border-radius: 50%;
     border: 2px solid vars.$color-popup-background;
     color: vars.$color-popup-background;
@@ -67,5 +70,15 @@
       background-color: vars.$color-background;
       color: #fff;
     }
+}
+
+.win-video-responsive {
+background-color: grey;
+color:black;
+border: 1px solid black;
+display: inline-block;
+margin:10px;
+padding-top:5px;
+
 }
 }
