--- a/src/components/Game/Win/win.scss
+++ b/src/components/Game/Win/win.scss
@@ -61,5 +61,20 @@
       color:red;
     }
   }
+  .log-button {
 
+    background-color:#11ffee00 ;
+    color: black;
+    border:none;
+    font-weight: bold;
+    padding-top:10px;
+    font-size: large;
+    text-transform: uppercase;
+    font-family: 'Quicksand', sans-serif;
+    &:hover {
+      text-decoration: underline;
+      color:red;
+      cursor:pointer;
+    }
+}
 }
