--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -40,6 +40,7 @@
     padding-top:10px;
     padding-bottom:10px;
     box-sizing: border-box;
+    
 
     .popular-scenarios-scenario {
       width: 300px;
@@ -47,7 +48,8 @@
       display: flex;
       flex-direction: row;
       box-shadow: 5px 5px 5px rgb(165, 159, 159);
-
+      transition: all 0.5s ease;
+      cursor: pointer;
      .popular-scenarios-scenario-image {
        width: 150px;
        height: 150px;
@@ -65,6 +67,9 @@
        width: 150px;
        height: 150px;
 
+     }
+     &:hover {
+       transform: scale(1.2);
      }
     }
   }
