--- a/src/components/Scenarios/scenarios.scss
+++ b/src/components/Scenarios/scenarios.scss
@@ -9,10 +9,10 @@
   box-sizing: border-box;
   position:absolute;
    top:28%;
-   width: 70%;
-   height: 700px;
+   width: 50%;
+   height: 80%;
    padding:10px;
-   margin:2px;
+   margin-left: 25%;
    
    .scenarios-describe {
     margin-top:10px;
