feat/gameList-BO

--- a/back/templates/back/game/score.html.twig
+++ b/back/templates/back/game/score.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Game List{% endblock %}
+{% block title %}High Scores{% endblock %}
 
 {% block body %}
 
