--- a/back/templates/base.html.twig
+++ b/back/templates/base.html.twig
@@ -22,8 +22,7 @@
 
     {% include 'back/include/_nav.html.twig' %}
 
-    <body class="ghost table">
-
+    <body class="ghost">
 		<div class="container">
 			<div class="row">
 				<div class="col">
