--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -11,9 +11,6 @@
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
   
-
-    
-
   .home-banniere {
     width: 100%;
     height: 200px;
@@ -21,7 +18,6 @@
     background-size: cover;
     width: 100%;
     height: 20vh;
-    
     }
 
   }
@@ -36,9 +32,8 @@
     padding-bottom:10px;
     box-sizing: border-box;
     
-
     .popular-scenarios-scenario {
-      width: 200px;
+      width: 250px;
       height: 250px;
       display: flex;
       flex-direction: column;
@@ -60,7 +55,7 @@
        text-align: justify;
        margin:2px;
        box-sizing: border-box;
-       width: 150px;
+       width: 200px;
        height: 150px;
 
      }
@@ -78,6 +73,14 @@
        transform: scale(1.2);
      }
     }
+  }
+
+  .popular-scenarios-subtitle {
+    font-family: "Meta";
+    font-variation-settings: "wght" 900, "ital" 1;
+    color:red;
+    padding-bottom:10px;
+    margin:2px;
   }
 }
 
