component-timer-css-done

--- a/src/components/Game/Timer/timer.scss
+++ b/src/components/Game/Timer/timer.scss
@@ -5,7 +5,7 @@
   width: 100px;
   height:100px;
   border-radius: 50%;
-  position:absolute;
+  position:fixed;
   top:1%;
   right:1%;
   display:inline-block;
